min hw requirements

--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
     <header class="navbar">
             <h1 id="nameheader">Christina Wu</h1>
         <br>
+        <div class=navlinks>
               <ul>
                 <li><a id="contactlink" href="contact.html">Contact</a></li>
                 <li><a id="portfoliolink" href="portfolio.html">Portfolio</a></li>
                 <li><a href="index.html">About</a></li>
               </ul>
+        <div>
     </header>
         <br>
 <div class="aboutme">
