--- a/contact.html
+++ b/contact.html
@@ -9,14 +9,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <header>
+    <header class="navbar">
             <h1 id="nameheader">Christina Wu</h1>
         <br>
+        <div class=navlinks>
               <ul>
                 <li><a id="contactlink" href="contact.html">Contact</a></li>
                 <li><a id="portfoliolink" href="portfolio.html">Portfolio</a></li>
                 <li><a href="index.html">About</a></li>
               </ul>
+        </div>
     </header>
         <br>
     <div class="contactform">
@@ -36,7 +38,7 @@
         </form>
     </div>            
   <br>
-<div class=connect>
+<div class="connect contact">
   <h2 id="connectheader">Connect With Me</h2>
   <hr>
    <a href="https://github.com/chrisyforshort"> <img id="github" src="./assets/images/social-media_github_flat-rounded-square-white-on-black_512x512.png"></a>
