--- a/portfolio.html
+++ b/portfolio.html
@@ -9,36 +9,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <header>
+    <header class="navbar">
             <h1 id="nameheader">Christina Wu</h1>
         <br>
+        <div class=navlinks>
               <ul>
                 <li><a id="contactlink" href="contact.html">Contact</a></li>
                 <li><a id="portfoliolink" href="portfolio.html">Portfolio</a></li>
                 <li><a href="index.html">About</a></li>
               </ul>
+        </div>
     </header>
         <br>
 <div class="portfolio">
    <h2 id="header">Portfolio</h2>
    <hr id="linebreak">
         <a href="https://scratch.mit.edu/projects/197674625/"><img class="portfolioimages scratch" src="./assets/images/Screen%20Shot%202018-01-18%20at%203.35.08%20PM.png"></a>
-        <h2 id="scratchbanner">Doggo's Deadly Farts</h2>
+        <h2 class="banner scratchbanner">Doggo's Deadly Farts</h2>
     
         <a href="assets/thisismyfirst.html"><img class="portfolioimages chicken" src="./assets/images/chickennuggets.jpg"></a>
-        <h2 id="chickenbanner">Chicken Nuggets HTML</h2>
+        <h2 class="banner chickenbanner">Chicken Nuggets HTML</h2>
 
         <a href="#"><img class="portfolioimages comingsoon" src="./assets/images/comingsoon.jpg"></a>
-        <h2 id="comingsoonbanner">Coming Soon!</h2> 
+        <h2 class="banner comingsoonbanner">Coming Soon!</h2> 
 
         <a href="#"><img class="portfolioimages comingsoon2" src="./assets/images/comingsoon.jpg"></a>
-        <h2 id="comingsoonbanner2">Coming Soon!</h2> 
+        <h2 class="banner comingsoonbanner2">Coming Soon!</h2> 
 
         <a href="#"><img class="portfolioimages comingsoon3" src="./assets/images/comingsoon.jpg"></a>
-        <h2 id="comingsoonbanner3">Coming Soon!</h2>                
+        <h2 class="banner comingsoonbanner3">Coming Soon!</h2>                
    </div>
   <br>
-<div class=connect>
+<div class="connect conportfolio">
   <h2 id="connectheader">Connect With Me</h2>
   <hr>
    <a href="https://github.com/chrisyforshort"> <img id="github" src="./assets/images/social-media_github_flat-rounded-square-white-on-black_512x512.png"></a>
